--- a/package.json
+++ b/package.json
@@ -6,10 +6,31 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "classnames": "^2.3.1",
+    "modern-normalize": "^1.1.0",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-github-calendar": "^2.0.2",
+    "react-github-calender": "^1.1.0",
+    "react-icons": "^4.2.0",
+    "react-lazy-load-image-component": "^1.5.1",
+    "react-media": "^1.10.0",
+    "react-parallax-tilt": "^1.5.56",
+    "react-particles-js": "^3.5.3",
+    "react-pdf": "^5.3.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "react-tilty": "^2.0.3",
+    "react-transition-group": "^4.4.2",
+    "tsparticles": "^1.34.0",
+    "typewriter-effect": "^2.18.0",
+    "web-vitals": "^1.1.2",
+    "workbox-core": "^6.2.4",
+    "workbox-expiration": "^6.2.4",
+    "workbox-precaching": "^6.2.4",
+    "workbox-routing": "^6.2.4",
+    "workbox-strategies": "^6.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
